# BuildScript

./: .editorconfig  .gitignore  CMakeLists.txt  Config.cmake.in  LICENSE  README.md  vcpkg.json
Docs/: Opcode.md
Driver/: CMakeLists.txt  Driver.cpp
Header/BuildScript/: Assert.h  Config.h  Version.h
Header/BuildScript/Bytecode/: BytecodeWriter.h  Opcode.h
Header/BuildScript/Compiler/: CharType.h  CompileOptions.h  Context.h  ErrorReporter.ReportID.def  ErrorReporter.ReportID.h  ErrorReporter.h  Identifier.h  Lexer.h  ManagedObject.h  ParseResult.h  Parser.Shared.h  Parser.h  SourcePosition.h  SourceText.h  StringRef.h  Token.h
Header/BuildScript/Compiler/AST/: ASTDumper.h  ASTNode.h  ASTVisitor.h  ASTWalker.h  AccessFlags.h  Declarations.h  Expressions.h  Nodes.def  OperatorKind.h  ParameterList.h  Parameters.h  ScriptNode.h  Statements.h
Header/BuildScript/Compiler/Analysis/: Scope.h  SemanticAnalyzer.AutoScope.h  SemanticAnalyzer.Builder.h  SemanticAnalyzer.h
Header/BuildScript/Compiler/IR/: BasicBlock.h  IRBuilder.h  IRCodeBlock.h  IRDumper.h  IRGenerator.h  IRStatement.h  IRValueReplacer.h  IRVisitor.h  Statements.h
Header/BuildScript/Compiler/Optimize/: Optimizer.h  Passes.h
Header/BuildScript/Compiler/Parse/: Lexer.h  Parser.h  ParserBase.h  Token.h
Header/BuildScript/Compiler/Symbol/: Symbol.h  SymbolTable.h
Header/BuildScript/Compiler/Utils/: Value.h
Header/BuildScript/Debug/: ASTDumper.h  NodeWriter.h
Header/BuildScript/GC/: Allocator.h  Handle.h  Heap.h  Object.h  ObjectHeader.h  Options.h  Rootable.h  Tracer.h
Header/BuildScript/GC/Impl/: Noop.h  Shared.h
Header/BuildScript/Platform/: MemoryChunk.h
Header/BuildScript/Utils/: AllStatic.h  BitCast.h  CharType.h  Convert.h  Encoding.h  Functions.h  Hash.h  NonCopyable.h  NonMovable.h  PointerArith.h  Singleton.h  TrailObjects.h  Trilean.h  TypeTraits.h
Source/: Version.cpp.in
Source/Bytecode/: BytecodeWriter.cpp  Opcode.cpp
Source/Compiler/: Context.cpp  ErrorReporter.ReportID.cpp  ErrorReporter.cpp  Lexer.cpp  ManagedObject.cpp  Parser.ClassMember.cpp  Parser.Declaration.cpp  Parser.Expression.cpp  Parser.Statement.cpp  Parser.cpp  SourceText.cpp  StringRef.cpp
Source/Compiler/AST/: ASTDumper.cpp  ASTVisitor.cpp  ASTWalker.cpp  Declarations.cpp  Expressions.cpp  OperatorKind.cpp  ParameterList.cpp  Parameters.cpp  Statements.cpp
Source/Compiler/Analysis/: Scope.cpp  SemanticAnalyzer.Declaration.cpp  SemanticAnalyzer.Expression.cpp  SemanticAnalyzer.Statement.cpp  SemanticAnalyzer.cpp
Source/Compiler/IR/: IRBuilder.cpp  IRDumper.cpp  IRGenerator.Declaration.cpp  IRGenerator.Expression.cpp  IRGenerator.Statement.cpp  IRGenerator.cpp  IRStatement.cpp  IRValueReplacer.cpp  Statements.cpp
Source/Compiler/Optimize/: Optimizer.cpp
Source/Compiler/Optimize/Pass/: CommonSubexpressionElimination.cpp  ConstantPropagation.cpp  LoopInvariantMove.cpp  RemoveRedundantBranches.cpp  SimplifyBranches.cpp
Source/Compiler/Parse/: Lexer.KeywordTable.cpp  Lexer.String.cpp  Lexer.cpp  Parser.Declaration.cpp  Parser.Expression.cpp  Parser.Misc.cpp  Parser.Statement.cpp  Parser.cpp  ParserBase.cpp  Token.cpp
Source/Compiler/Symbol/: Symbol.cpp  SymbolTable.cpp
Source/Debug/: ASTDumper.ClassMember.cpp  ASTDumper.Declaration.cpp  ASTDumper.Expression.cpp  ASTDumper.Statement.cpp  ASTDumper.cpp  NodeWriter.cpp
Source/GC/: Allocator.cpp  Handle.cpp  Heap.cpp  Rootable.cpp
Source/GC/Impl/: Noop.cpp
Source/Platform/: MemoryChunk.cpp
Source/Utils/: Convert.cpp  Encoding.cpp  Hash.cpp
Source/Utils/Encoding/: EUCKR.ConversionTable.cpp  EUCKR.ConversionTable.h  EUCKR.cpp  EncodingRegisterer.h  UTF16.cpp  UTF32.cpp  UTF8.cpp
Test/: CMakeLists.txt  Driver.cpp
Test/Compiler/: LexerTest.cpp  SourceTextTest.cpp
Test/Scripts/: LexerTest.script  LexerTest.script.expected
Test/Utils/: ConvertTest.Float.h  ConvertTest.cpp  EncodingTest.cpp  HashTest.cpp  HashTestSet.h
Test/Utils/EncodingTest/: EUCKR.Invalid.h  EUCKR.Random.h  EUCKR.h  UTF16.Invalid.h  UTF16.Random.h  UTF16BE.Invalid.h  UTF16BE.Random.h  UTF16BE.h  UTF16LE.h  UTF32.Invalid.h  UTF32.Random.h  UTF32BE.Invalid.h  UTF32BE.Random.h  UTF32BE.h  UTF32LE.h  UTF8.Invalid.h  UTF8.Random.h  UTF8.h
Utils/: ConvertTestGen.py  EUCKRTableGen.py  EncodingTestGen.py  HashTestGen.py  KeywordTableGen.py  Keywords  shared.py
